syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";
import "product_order.proto";

service ProductRhythmRecord{
    rpc Add(ProductRhythmRecordInfo)returns(CommonResponse){}
    rpc Update(ProductRhythmRecordInfo)returns(CommonResponse){}
    rpc Get(GetProductRhythmRecordRequest)returns(GetProductRhythmRecordDetailResponse){}
}

message GetProductRhythmRecordRequest{
    string productionProcessID=1;
    string productInfoID=2;
    string productionStationID=3;
    bool hasWorkEndTime=4;
}

message ProductRhythmRecordInfo {
	//ID 
    string id=2;
	//创建时间 
 	string createTime=3;
	//标准时长(秒) 
 	int32 standardWorkTime=4;
	//作业人员ID 
    string workUserID=5;
	//开始作业时间 
 	string workStartTime=6;
	//等待时长(秒) 
 	int32 waitTime=7;
	//作业时长(秒) 
 	int32 workTime=8;
	//超时时长(秒) 
 	int32 overTime=9;
	//结束作业时间 
 	string workEndTime=10;
	//是否返工 
 	bool isRework=11;
	//备注 
 	string remark=12;
	//生产工站ID 
    string productionStationID=13;
    ProductionStationInfo productionStation=14;
	//生产工序ID 
    string productionProcessID=15;
    ProductionProcessInfo productionProcess=16;
	//产品信息ID 
    string productInfoID=17;
    ProductInfoInfo productInfo=18;
}

message QueryProductRhythmRecordRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	// @inject_tag: uri:"productOrderNo" form:"productOrderNo"
	string productOrderNo=4;
	// @inject_tag: uri:"productSerialNo" form:"productSerialNo"
	string productSerialNo=5;
	// @inject_tag: uri:"createTime0" form:"createTime0"
	string createTime0=6;
	// @inject_tag: uri:"createTime1" form:"createTime1"
	string createTime1=7;
}

message QueryProductRhythmRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductRhythmRecordInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductRhythmRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductRhythmRecordInfo data=3;
}

message GetProductRhythmRecordDetailResponse{
    Code code=1;
    string message=2;
    ProductRhythmRecordInfo data=3;
}